--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -89,8 +89,6 @@
   border-radius: 50%;
 }
 
-/*====== footer-form ======*/
-
 .social-form-text {
   margin-bottom: 20px;
 
@@ -119,4 +117,55 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+}
+.inform-user-email::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-btn {
+  position: relative;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+
+  border: none;
+
+  margin-left: 12px;
+  justify-content: center;
+  align-items: center;
+
+  letter-spacing: 0.06em;
+
+  color: #ffffff;
+
+  width: 200px;
+  height: 50px;
+
+  padding-right: 62px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  transition: background var(--trans-accent), box-shadow var(--trans-accent);
+}
+
+.footer-form-btn:focus,
+.footer-form-btn:hover {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.footer-form-icon {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+
+  margin-left: 10px;
 }
