--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -11,9 +11,9 @@
   padding-top: 200px;
   padding-bottom: 200px;
   margin: 0 auto;
-}
 
-.hero-title {
+
+  &-title {
   width: 696px;
   margin-bottom: 30px;
   margin-left: auto;
@@ -27,6 +27,9 @@
   text-transform: uppercase;
   color: var(--secondary-accent-page-color);
 }
+}
+
+
 .model-btn {
   transition: background var(--trans-accent), box-shadow var(--trans-accent);
   border: none;
@@ -41,10 +44,11 @@
   letter-spacing: 0.06em;
   cursor: pointer;
   color: var(--secondary-accent-page-color);
-}
-.model-btn:hover,
-.model-btn:focus {
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+
+  &:hover,
+  &:focus {
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  }
 }
