--- a/css/main.css
+++ b/css/main.css
@@ -116,11 +116,9 @@ body {
 .modal-close-btn-icon {
   transition: fill var(--trans-accent);
 }
-
 .modal-close-btn:focus .modal-close-btn-icon {
   fill: var(--accent-page-color);
 }
-
 .modal-close-btn-icon:hover {
   fill: var(--accent-page-color);
   background-color: #fff;
@@ -130,7 +128,6 @@ body {
   display: flex;
   flex-direction: column;
 }
-
 .modal-form-text {
   margin-bottom: 12px;
   font-weight: 700;
@@ -140,7 +137,6 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-page-color);
 }
-
 .modal-form-field {
   display: block;
   margin-bottom: 10px;
@@ -172,14 +168,9 @@ body {
   border-radius: 4px;
   transition: border var(--trans-accent);
 }
-
 .modal-form-input:focus {
   outline: none;
   border: 1px solid var(--accent-page-color);
-}
-
-.modal-form-input:focus + .icon-form {
-  fill: var(--accent-page-color);
 }
 
 .icon-form {
@@ -188,6 +179,9 @@ body {
   top: 0;
   left: 12px;
   transition: fill var(--trans-accent);
+}
+.modal-form-input:focus + .icon-form {
+  fill: var(--accent-page-color);
 }
 
 .modal-form-field-message {
@@ -204,11 +198,9 @@ body {
   border-radius: 4px;
   transition: border var(--trans-accent);
 }
-
 .modal-form-message::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-form-message:focus {
   outline: none;
   border: 1px solid var(--accent-page-color);
@@ -225,20 +217,6 @@ body {
   color: var(--secondary-page-color);
   transition: background-image 2s linear;
 }
-
-.modal-form-check:checked + .modal-form-check-desc::before {
-  background-color: var(--accent-page-color);
-  border: transparent;
-  background-image: url(../images/check-mark.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.modal-form-check:focus + .modal-form-check-desc::before {
-  outline: 1px solid var(--accent-page-color);
-  border: none;
-}
-
 .modal-form-check-desc::before {
   content: "";
   display: block;
@@ -249,6 +227,17 @@ body {
   border: solid 2px var(--primary-page-color);
   border-radius: 2px;
   transition: background-color var(--trans-accent);
+}
+.modal-form-check:checked + .modal-form-check-desc::before {
+  background-color: var(--accent-page-color);
+  border: transparent;
+  background-image: url(../images/check-mark.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.modal-form-check:focus + .modal-form-check-desc::before {
+  outline: 1px solid var(--accent-page-color);
+  border: none;
 }
 
 .modal-form-check-desc-link {
@@ -274,9 +263,7 @@ body {
   border-radius: 4px;
   transition: background var(--trans-accent), box-shadow var(--trans-accent);
 }
-
-.modal-form-btn:focus,
-.modal-form-btn:hover {
+.modal-form-btn:focus, .modal-form-btn:hover {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -285,7 +272,6 @@ body {
 .header {
   border-bottom: 1px solid #ececec;
 }
-
 .header-container {
   display: flex;
   align-items: center;
@@ -306,8 +292,7 @@ body {
   color: var(--accent-page-color);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
-span {
+.logotype span {
   color: #000;
 }
 
@@ -316,13 +301,12 @@ span {
   align-items: center;
 }
 
-.menu-item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .menu-item {
   position: relative;
   padding: 32px 0;
+}
+.menu-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .contacts-list {
@@ -342,16 +326,13 @@ span {
   letter-spacing: 0.02em;
   color: var(--primary-page-color);
 }
-
-.menu-link:hover,
-.menu-link:focus {
+.menu-link:hover, .menu-link:focus {
   color: var(--accent-page-color);
 }
 
 .menu-link.link.current {
   color: var(--accent-page-color);
 }
-
 .menu-link.link.current::before {
   content: "";
   position: absolute;
@@ -374,9 +355,7 @@ span {
   line-height: 1.71;
   color: var(--secondary-page-color);
 }
-
-.contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:hover, .contacts-link:focus {
   color: #2196f3;
 }
 
@@ -398,7 +377,6 @@ span {
   padding-bottom: 200px;
   margin: 0 auto;
 }
-
 .hero-title {
   width: 696px;
   margin-bottom: 30px;
@@ -427,16 +405,14 @@ span {
   cursor: pointer;
   color: var(--secondary-accent-page-color);
 }
-
-.model-btn:hover,
-.model-btn:focus {
+.model-btn:hover, .model-btn:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
 /* сховав заголовок */
-.advantages-main-title {
+.advantages-title-main {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -487,7 +463,6 @@ span {
   padding-top: 0px;
   padding-bottom: 94px;
 }
-
 .about-list {
   display: flex;
   justify-content: space-between;
@@ -501,10 +476,9 @@ span {
   color: var(--primary-page-color);
 }
 
-.overlay-about {
+.about-ovarlay {
   position: relative;
 }
-
 .about-ovarlay-text {
   position: absolute;
   width: 100%;
@@ -584,9 +558,7 @@ span {
   border-radius: 50%;
   transition: background-color var(--trans-accent), fill var(--trans-accent);
 }
-
-.social-link:hover,
-.social-link:focus {
+.social-link:hover, .social-link:focus {
   background-color: #2196f3;
   fill: #fff;
 }
@@ -616,22 +588,14 @@ span {
   border-radius: 4px;
   transition: fill var(--trans-accent), border-color var(--trans-accent);
 }
-
-.customers-item {
-  width: 170px;
-  height: 92px;
-}
-
-.customers-link:focus,
-.customers-link:hover {
+.customers-link:focus, .customers-link:hover {
   border-color: var(--accent-page-color);
   fill: #2196f3;
 }
 
-.footer-nav {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
+.customers-item {
+  width: 170px;
+  height: 92px;
 }
 
 .footer {
@@ -639,18 +603,10 @@ span {
   padding-bottom: 60px;
   background-color: #2f303a;
 }
-
-.footer-logo span {
-  color: #fff;
-}
-
-.join-list {
-  gap: 10px;
-}
-
-.address {
-  margin-top: 20px;
-  font-style: normal;
+.footer-nav {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
 }
 
 .footer-logo {
@@ -659,6 +615,14 @@ span {
   font-size: 26px;
   line-height: 1.19;
   color: var(--accent-page-color);
+}
+.footer-logo span {
+  color: #fff;
+}
+
+.address {
+  margin-top: 20px;
+  font-style: normal;
 }
 
 .footer-item:not(:last-child) {
@@ -677,9 +641,7 @@ span {
   color: rgba(255, 255, 255, 0.6);
   transition: color var(--trans-accent);
 }
-
-.footer-link:focus,
-.footer-link:hover {
+.footer-link:focus, .footer-link:hover {
   color: var(--accent-page-color);
 }
 
@@ -687,6 +649,7 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 
 .join-title {
@@ -709,9 +672,7 @@ span {
   fill: #fff;
   transition: background-color var(--trans-accent);
 }
-
-.join-link:hover,
-.join-link:focus {
+.join-link:hover, .join-link:focus {
   background-color: var(--accent-page-color);
   border-radius: 50%;
 }
@@ -740,6 +701,46 @@ span {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+}
+.inform-user-email::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-btn {
+  position: relative;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  border: none;
+  margin-left: 12px;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  width: 200px;
+  height: 50px;
+  padding-right: 62px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: background var(--trans-accent), box-shadow var(--trans-accent);
+}
+.footer-form-btn:focus, .footer-form-btn:hover {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.footer-form-icon {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  margin-left: 10px;
 }
 
 /* СХОВАНИЙ ЗАГОЛОВОК  */
@@ -783,9 +784,7 @@ span {
   background-color: var(--accent-page-color);
   color: var(--secondary-accent-page-color);
 }
-
-.page-btn:hover,
-.page-btn:focus {
+.page-btn.current:hover, .page-btn.current:focus {
   color: var(--secondary-accent-page-color);
   background: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -816,9 +815,7 @@ span {
   display: block;
   transition: box-shadow var(--trans-accent);
 }
-
-.about-rotfolio-link:hover,
-.about-rotfolio-link:focus {
+.about-rotfolio-link:hover, .about-rotfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -855,8 +852,6 @@ span {
   color: var(--secondary-accent-page-color);
   background-color: rgba(33, 150, 243, 0.9);
 }
-
-.about-rotfolio-link:hover .overlay-portfolio,
-.about-rotfolio-link:focus .overlay-portfolio {
+.about-rotfolio-link:hover .overlay-portfolio, .about-rotfolio-link:focus .overlay-portfolio {
   transform: translate(0, 0);
 }/*# sourceMappingURL=main.css.map */
