--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -1,5 +1,5 @@
 /* сховав заголовок */
-.advantages-main-title {
+.advantages-title-main{
   position: absolute;
   width: 1px;
   height: 1px;
@@ -18,6 +18,7 @@
   text-transform: uppercase;
   color: var(--primary-page-color);
 }
+
 .advantages-list {
   display: flex;
   justify-content: space-between;
