--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,9 +1,10 @@
 .header {
   border-bottom: 1px solid #ececec;
-}
-.header-container {
-  display: flex;
-  align-items: center;
+
+  &-container {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .main-nav {
@@ -23,22 +24,24 @@
   color: var(--accent-page-color);
 
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-span {
-  color: #000;
+
+  span {
+    color: #000;
+  }
 }
 
 .menu {
   display: flex;
   align-items: center;
 }
-.menu-item:not(:last-child) {
-  margin-right: 50px;
-}
 
 .menu-item {
   position: relative;
   padding: 32px 0;
+
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .contacts-list {
@@ -58,31 +61,31 @@ span {
   letter-spacing: 0.02em;
 
   color: var(--primary-page-color);
-}
 
-.menu-link:hover,
-.menu-link:focus {
-  color: var(--accent-page-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-page-color);
+  }
 }
 
 .menu-link.link.current {
   color: var(--accent-page-color);
-}
 
-.menu-link.link.current::before {
-  content: '';
-  position: absolute;
-  display: block;
-  transform: translateX(-50%);
+  &::before {
+    content: '';
+    position: absolute;
+    display: block;
+    transform: translateX(-50%);
 
-  width: 100%;
-  height: 4px;
+    width: 100%;
+    height: 4px;
 
-  bottom: 0;
-  left: 50%;
+    bottom: 0;
+    left: 50%;
 
-  border-radius: 2px;
-  background-color: var(--accent-page-color);
+    border-radius: 2px;
+    background-color: var(--accent-page-color);
+  }
 }
 
 .contacts-link {
@@ -95,11 +98,11 @@ span {
   font-weight: 500;
   line-height: 1.71;
   color: var(--secondary-page-color);
-}
 
-.contacts-link:hover,
-.contacts-link:focus {
-  color: #2196f3;
+  &:hover,
+  &:focus {
+    color: #2196f3;
+  }
 }
 
 .envelope-icon,
