--- a/scss/pages/_portfolio.scss
+++ b/scss/pages/_portfolio.scss
@@ -39,16 +39,17 @@
 .page-btn.current {
   background-color: var(--accent-page-color);
   color: var(--secondary-accent-page-color);
-}
-.page-btn:hover,
-.page-btn:focus {
-  color: var(--secondary-accent-page-color);
-  background: #2196f3;
 
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  cursor: pointer;
+  &:hover,
+  &:focus {
+    color: var(--secondary-accent-page-color);
+    background: #2196f3;
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    cursor: pointer;
+  }
 }
 
 .div-container {
@@ -72,13 +73,14 @@
 .about-rotfolio-link {
   display: block;
   transition: box-shadow var(--trans-accent);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
-.about-rotfolio-link:hover,
-.about-rotfolio-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 .portfolio-title {
   font-size: 18px;
   line-height: 2;
@@ -115,9 +117,9 @@
   color: var(--secondary-accent-page-color);
 
   background-color: rgba(33, 150, 243, 0.9);
-}
 
-.about-rotfolio-link:hover .overlay-portfolio,
-.about-rotfolio-link:focus .overlay-portfolio {
-  transform: translate(0, 0);
+  .about-rotfolio-link:hover &,
+  .about-rotfolio-link:focus & {
+    transform: translate(0, 0);
+  }
 }
